add project requirements

--- a/optimization project.ipynb
+++ b/optimization project.ipynb
@@ -1,35 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"600\"\n",
-       "            height=\"300\"\n",
-       "            src=\"./OP Project requirements\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x22cfabef940>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame(\"./assets/OP Project requirements\", width=600, height=300)"
+    "# Project Requirements\n",
+    "![](assets/OP%20Project%20requirements_page-0001.jpg)\n",
+    "![](assets/OP%20Project%20requirements_page-0002.jpg)"
    ]
   },
   {
